NEWS                                                            -*- outline -*-
----

Welcome to sbuild 0.58.2.  Please read these release notes carefully.

Full installation instructions are provided in the INSTALL file.  The
README file also contains more specific notes regarding building and
configuration.

* Major changes in 0.58.2:

  None.

* Major changes in 0.58.1:

  None.

* Major changes in 0.58.0:

  1) The configuration option @no_auto_upgrade, which was no longer
     used, has been removed.  To prevent packages being upgraded
     automatically, please use sbuild-hold.  See sbuild-hold(1).

  2) The configuration option $chroot_mode has been restored, allowing
     chroot access by both schroot (which remains the default) and
     sudo.

  3) A new configuration option $chroot_split has been added.  This
     allows both schroot and sudo chroot access to be modified to run
     apt/dpkg on the host system.  Note that schroot needs sudo to run
     commands as root on the host system.

  4) Deprecated commands from /usr/lib/sbuild have been removed.
     Please use the sbuild-* replacements found in /usr/bin.

  5) The maintainer name defaults to DEBEMAIL if set in the
     environment, so no longer needs setting explicitly in .sbuildrc.

  6) Unless configured as a buildd ($sbuild_mode), when using sudo
     chroot access, chroots are searched for in /etc/sbuild/chroots.
     This directory should contain symlinks to the chroots, with the
     distribution name being the name of the symlink.  Buildd mode
     will continue to use the old method of current-$distribution
     symlinks in the current directory.

  7) The log format used for build logs has been updated to use a more
     readable format, and is now encoded in UTF-8 rather than
     US-ASCII.  Code which parses the log file may need to be updated
     to handle the new format.  Further log format changes made in the
     future.

  8) All commands now have a corresponding manual page.
